After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654563 - info capplet: Failed to calculate disk space
info capplet: Failed to calculate disk space
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-07-13 15:50 UTC by Pedro Villavicencio
Modified: 2011-09-21 16:08 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
gunixmounts: exempt entries with "none" mountpoint (1.42 KB, patch)
2011-09-20 14:28 UTC, Allison Karlitskaya (desrt)
reviewed Details | Review
info: continue on filesystem query info (1.56 KB, patch)
2011-09-20 14:52 UTC, Allison Karlitskaya (desrt)
none Details | Review

Description Pedro Villavicencio 2011-07-13 15:50:19 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/805504

"TEST CASE
1. Launch info control-center applet from a terminal
  $ gnome-control-center info

Results:
The Overview section is displayed and the 'Disk' information shows 'Calculating...' and never shows disk space.
On the terminal the following warning is displayed:
info-cc-panel-WARNING **: Failed to get filesystem free space for '/home/testuser/none': Error getting filesystem info: No such file or directory

(testuser is the name of the user i'm logged in)"
Comment 1 Bastien Nocera 2011-07-13 15:56:51 UTC
Likely a glib bug. What's the content of /proc/mounts, /etc/mtab and /etc/fstab?
Comment 3 Bastien Nocera 2011-07-13 16:14:43 UTC
Bug in GIO's code that reads the Unix entry. g_unix_mount_get_mount_path() returns "none", instead of NULL for those entries.
Comment 4 Matthias Clasen 2011-07-18 23:41:14 UTC
David, did you want to look at fixing this ?
Comment 5 Allison Karlitskaya (desrt) 2011-09-20 14:28:39 UTC
Created attachment 197063 [details] [review]
gunixmounts: exempt entries with "none" mountpoint

We ignore entries with mountpoint of "swap" and "ignore".  Add "none" to
that list, since Debian uses it.

Probably we should move to using our already-existing internal list of
things to ignore, but this patch is more minimally intrusive for now.
Comment 6 Allison Karlitskaya (desrt) 2011-09-20 14:52:15 UTC
Created attachment 197067 [details] [review]
info: continue on filesystem query info

When calculating the total size of all filesystems, failure to query a
single filesystem results in the iteration being cancelled and a
"Calculating..." message being left on the UI.  Instead, just ignore the
filesystem that failed and move on to the next.
Comment 7 David Zeuthen (not reading bugmail) 2011-09-20 15:49:18 UTC
Review of attachment 197063 [details] [review]:

LGTM
Comment 8 David Zeuthen (not reading bugmail) 2011-09-20 15:56:15 UTC
Review of attachment 197067 [details] [review]:

I'm not a control-center developer but, sure, from a drive-by-shooting point, sounds like a good idea.
Comment 9 Allison Karlitskaya (desrt) 2011-09-20 16:59:32 UTC
https://mail.gnome.org/archives/release-team/2011-September/msg00219.html
Comment 10 Allison Karlitskaya (desrt) 2011-09-21 16:08:47 UTC
Got +2 from r-t, so both patches applied to both branches.